--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div class="resultado-valor numero-hilo" id="resultadoNumero"></div>
             </div>
         </div>
-        <div class="footer">D4RK © 993337929 — Todos los derechos reservados</div>
+        <div class="footer">D4RK - 993337929 © 2025 — Todos los derechos reservados</div>
     </div>
     
     <script>
