Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>Contador de Hilo FTTH</title>
     <style>
         * {
@@ -233,18 +234,18 @@
                 <label for="nBuffer">Buffer Usado:</label>
                 <select id="nBuffer" name="nBuffer" required>
                     <option value="">-- Selecciona un buffer --</option>
-                    <option value="1">1) Azul</option>
-                    <option value="2">2) Naranja</option>
-                    <option value="3">3) Verde</option>
-                    <option value="4">4) Marron</option>
-                    <option value="5">5) Gris</option>
-                    <option value="6">6) Blanco</option>
-                    <option value="7">7) Rojo</option>
-                    <option value="8">8) Negro</option>
-                    <option value="9">9) Amarillo</option>
-                    <option value="10">10) Violeta</option>
-                    <option value="11">11) Rosa</option>
-                    <option value="12">12) Aqua</option>
+                    <option value="1">Azul</option>
+                    <option value="2">Naranja</option>
+                    <option value="3">Verde</option>
+                    <option value="4">Marrón</option>
+                    <option value="5">Gris</option>
+                    <option value="6">Blanco</option>
+                    <option value="7">Rojo</option>
+                    <option value="8">Negro</option>
+                    <option value="9">Amarillo</option>
+                    <option value="10">Violeta</option>
+                    <option value="11">Rosa</option>
+                    <option value="12">Aqua</option>
                 </select>
             </div>
             
@@ -284,4 +285,5 @@
     </script>
 </body>
 </html>
+
 
