--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <form id="formulario">
             <div class="form-group">
                 <label for="nHilos">Cantidad de Hilos por Buffer:</label>
-                <input type="number" id="nHilos" name="nHilos" min="1" max="12" value="12" required>
+                <input type="number" id="nHilos" name="nHilos" min="1" max="12" value="6" required>
                 <p class="info-text">Máximo 12 hilos disponibles</p>
             </div>
             
@@ -281,9 +281,10 @@
     </div>
     
     <script>
-        const a=document.getElementById('nHilos'),b=document.getElementById('nBuffer'),c=document.getElementById('nHilo'),d=document.getElementById('calcularBtn'),e=document.getElementById('limpiarBtn'),f=document.getElementById('resultado'),g=document.getElementById('error'),h={1:"Azul",2:"Naranja",3:"Verde",4:"Marron",5:"Gris",6:"Blanco",7:"Rojo",8:"Negro",9:"Amarillo",10:"Violeta",11:"Rosa",12:"Aqua"};a.addEventListener('change',i);a.addEventListener('input',i);function i(){const j=parseInt(a.value);c.innerHTML='<option value="">-- Selecciona un hilo --</option>';if(j>0&&j<=12)for(let k=1;k<=j;k++){const l=document.createElement('option');l.value=k;l.textContent=`${k}) ${h[k]}`;c.appendChild(l)}}d.addEventListener('click',function(){const j=parseInt(a.value),m=parseInt(b.value),n=parseInt(c.value);if(!j||!m||!n){p('Por favor completa todos los campos');return}if(m<1||m>12){p('Buffer debe estar entre 1 y 12');return}if(n<1||n>j){p(`Hilo debe estar entre 1 y ${j}`);return}const o=j*(m-1)+n;q({buffer_color:h[m],hilo_color:h[n],numero_hilo:o});r()});e.addEventListener('click',function(){a.value='12';b.value='';c.value='';f.classList.remove('activo');r();i()});function q(s){document.getElementById('resultadoBuffer').textContent=s.buffer_color;document.getElementById('resultadoHilo').textContent=s.hilo_color;document.getElementById('resultadoNumero').textContent=s.numero_hilo;f.classList.add('activo')}function p(t){g.textContent=t;g.classList.add('activo')}function r(){g.classList.remove('activo')}i();
+        const a=document.getElementById('nHilos'),b=document.getElementById('nBuffer'),c=document.getElementById('nHilo'),d=document.getElementById('calcularBtn'),e=document.getElementById('limpiarBtn'),f=document.getElementById('resultado'),g=document.getElementById('error'),h={1:"Azul",2:"Naranja",3:"Verde",4:"Marron",5:"Gris",6:"Blanco",7:"Rojo",8:"Negro",9:"Amarillo",10:"Violeta",11:"Rosa",12:"Aqua"};a.addEventListener('change',i);a.addEventListener('input',i);function i(){const j=parseInt(a.value);c.innerHTML='<option value="">-- Selecciona un hilo --</option>';if(j>0&&j<=12)for(let k=1;k<=j;k++){const l=document.createElement('option');l.value=k;l.textContent=`${h[k]}`;c.appendChild(l)}}d.addEventListener('click',function(){const j=parseInt(a.value),m=parseInt(b.value),n=parseInt(c.value);if(!j||!m||!n){p('Por favor completa todos los campos');return}if(m<1||m>12){p('Buffer debe estar entre 1 y 12');return}if(n<1||n>j){p(`Hilo debe estar entre 1 y ${j}`);return}const o=j*(m-1)+n;q({buffer_color:h[m],hilo_color:h[n],numero_hilo:o});r()});e.addEventListener('click',function(){a.value='12';b.value='';c.value='';f.classList.remove('activo');r();i()});function q(s){document.getElementById('resultadoBuffer').textContent=s.buffer_color;document.getElementById('resultadoHilo').textContent=s.hilo_color;document.getElementById('resultadoNumero').textContent=s.numero_hilo;f.classList.add('activo')}function p(t){g.textContent=t;g.classList.add('activo')}function r(){g.classList.remove('activo')}i();
     </script>
 </body>
 </html>
+
 
 
